--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -2,12 +2,13 @@
   <PropertyGroup>
     <LangVersion>12.0</LangVersion>
 	<TargetFrameworks>net462;netstandard2.0;netstandard2.1;net6.0;net7.0;net8.0</TargetFrameworks>
-    <PackageDescription>Some extensions method for ServiceCollection, that not include in official Microsoft.Extensions.DependencyInjection package.</PackageDescription>
+    <PackageDescription>Some extensions method for Type and Assembly, that not include in official System.Reflection.</PackageDescription>
     <Authors>Selectorsvt</Authors>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <RepositoryUrl>https://github.com/Selectorsvt/Extended.System.Reflection</RepositoryUrl>
 	<PackageOutputPath>.\nupkg</PackageOutputPath>
+	<Version>1.0.1</Version>
   </PropertyGroup>
 
 	<PropertyGroup>
